# Froud-Detection-Agents

./: .gitignore  Makefile  README.md  RUN.md  SYSTEM_REPORT.md  pyproject.toml
evals/: ablations.py  run_eval.py  scenarios.yaml
src/: client.py  metrics.py  worker.py
src/activities/: __init__.py  _utils.py  aggregate.py  compose.py  drop.py  interpret.py  parse.py  plan.py  project.py  run_algo.py  synthesize.py  verify.py
src/agents/: __init__.py  composer.py  interpreter.py  model.py  planner.py  router.py  stubs.py  synthesizer.py  verifier.py
src/contracts/: __init__.py  branch.py  composer.py  hypothesis.py  verdict.py
src/gds/: algorithms.py  driver.py  projections.py
src/verifiers/: __init__.py  templates.py
src/workflows/: __init__.py  branch.py  investigation.py
tests/: conftest.py  test_agents.py  test_aggregate.py  test_algorithms.py  test_branch_agents.py  test_catalog.py  test_composer.py  test_eval_harness.py  test_projections.py  test_synthesizer.py  test_verifiers.py  test_workflow_branch.py  test_workflow_custom.py  test_workflow_investigation.py
tests/fixtures/: graph_seed.cypher
